# zplint

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: KNOWLEDGE.md
scripts/: genapi.mjs
src/: api.rs  api_check.rs  config.rs  detectors.rs  discover.rs  engine.rs  fix.rs  main.rs  output.rs  rules.rs  watch.rs
